--- a/src/App.css
+++ b/src/App.css
@@ -121,6 +121,8 @@
   border-radius: 10px;
   padding: 10px;
   cursor: pointer;
+  transition: all;
+  transition-duration: 500ms;
 }
 
 .customCard:hover {
@@ -132,6 +134,8 @@
   border-radius: 10px;
   padding: 6px;
   position: relative;
+  box-shadow: 0 4px 8px rgba(255, 215, 152, 0.5);
+  /* Example shadow */
 }
 
 .customBtn {
