--- a/src/index.css
+++ b/src/index.css
@@ -32,7 +32,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-  background: radial-gradient(circle at center, #461E59, #000);
+  background: radial-gradient(circle at center, #023744, #000);
   font-family: 'Outfit', sans-serif;
 }
 
