refacotr: Daily task, Join community and Invite friend add to in Home page

--- a/src/App.css
+++ b/src/App.css
@@ -176,3 +176,7 @@ input:focus {
   font-weight: bold;
   padding: 2px 10px;
 }
+.carousel-control-prev,
+.carousel-control-next {
+  display: none !important; /* Hides the control buttons */
+}
