--- a/src/App.css
+++ b/src/App.css
@@ -1,182 +1,215 @@
 @keyframes fadeInMoveUp {
-  0% {
-    opacity: 0;
-    top: 40%;
-  }
-
-  40% {
-    opacity: 1;
-    top: 35%;
-  }
-
-  90% {
-    opacity: 1;
-    top: 30%;
-  }
-
-  100% {
-    opacity: 0;
-    top: 30%;
-  }
+    0% {
+        opacity: 0;
+        top: 40%;
+    }
+    40% {
+        opacity: 1;
+        top: 35%;
+    }
+    90% {
+        opacity: 1;
+        top: 30%;
+    }
+    100% {
+        opacity: 0;
+        top: 30%;
+    }
 }
 
+
 /* Custom scrollbar styles */
+
 ::-webkit-scrollbar {
-  width: 1px;
-  /* Width of the scrollbar */
-  height: 2px;
+    width: 1px;
+    /* Width of the scrollbar */
+    height: 2px;
 }
 
 ::-webkit-scrollbar-track {
-  background: #f1f1f100;
-  /* Color of the track */
+    background: #f1f1f100;
+    /* Color of the track */
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #24224d;
-  /* Color of the scrollbar thumb */
-  background: #4D8CEC;
-  /* Color of the scrollbar thumb */
-  border-radius: 4px;
-  /* Rounded corners for the scrollbar thumb */
+    background: #24224d;
+    /* Color of the scrollbar thumb */
+    background: #4D8CEC;
+    /* Color of the scrollbar thumb */
+    border-radius: 4px;
+    /* Rounded corners for the scrollbar thumb */
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: #555;
-  /* Color of the scrollbar thumb on hover */
+    background: #555;
+    /* Color of the scrollbar thumb on hover */
 }
 
 .not-selectable {
-  user-select: none;
-  pointer-events: none;
+    user-select: none;
+    pointer-events: none;
 }
 
 .animate-fadeInMoveUp {
-  animation-name: fadeInMoveUp;
-  animation-duration: 0.5s;
-  /* Adjust duration as needed */
-  animation-fill-mode: both;
-  /* Keeps the final state */
+    animation-name: fadeInMoveUp;
+    animation-duration: 0.5s;
+    /* Adjust duration as needed */
+    animation-fill-mode: both;
+    /* Keeps the final state */
 }
 
 #root {
-  width: 100%;
-  min-height: 100vh;
-  display: flex;
-  justify-content: center;
-  margin: 0 auto;
-  text-align: center;
-  color: white;
-  font-family: 'Inter';
-  background-color: #000;
+    width: 100%;
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
+    text-align: center;
+    color: white;
+    font-family: 'Inter';
+    background-color: #000;
 }
 
 .lilita {
-  font-family: 'Lilita One';
+    font-family: 'Lilita One';
 }
 
 .logo {
-  height: 6em;
-  will-change: filter;
-  transition: filter 300ms;
+    height: 6em;
+    will-change: filter;
+    transition: filter 300ms;
 }
 
 .logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+    filter: drop-shadow(0 0 2em #646cffaa);
 }
 
 .logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+    filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
 @keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-
-  to {
-    transform: rotate(360deg);
-  }
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+    a:nth-of-type(2) .logo {
+        animation: logo-spin infinite 20s linear;
+    }
 }
 
 .card {
-  padding: 2em;
+    padding: 2em;
 }
 
 .read-the-docs {
-  color: #888;
+    color: #888;
 }
 
 .right-skew {
-  clip-path: polygon(0 0, 100% 0, 99.5% 100%, 0% 100%);
+    clip-path: polygon(0 0, 100% 0, 99.5% 100%, 0% 100%);
 }
 
 .customCard {
-  background-color: #FFD798;
-  border-radius: 10px;
-  padding: 10px;
-  cursor: pointer;
-  transition: all;
-  transition-duration: 500ms;
+    background-color: #FFD798;
+    border-radius: 10px;
+    padding: 10px;
+    cursor: pointer;
+    transition: all;
+    transition-duration: 500ms;
 }
 
 .customCard:hover {
-  opacity: 0.9;
+    opacity: 0.9;
 }
 
 .customCard-container {
-  background-image: linear-gradient(to bottom, #FFD798, #D18729);
-  border-radius: 10px;
-  padding: 6px;
-  position: relative;
-  box-shadow: 0 4px 8px rgba(255, 215, 152, 0.5);
-  /* Example shadow */
+    background-image: linear-gradient(to bottom, #FFD798, #D18729);
+    border-radius: 10px;
+    padding: 6px;
+    position: relative;
+    box-shadow: 0 4px 8px rgba(255, 215, 152, 0.5);
+    /* Example shadow */
 }
 
 .customBtn {
-  background-image: linear-gradient(to bottom, #72B5BC, #023744);
-  color: white;
-  border: solid 2px #023744;
+    background-image: linear-gradient(to bottom, #72B5BC, #023744);
+    color: white;
+    border: solid 2px #023744;
 }
 
 .stopBtn {
-  background-image: linear-gradient(to bottom, #C22525, #023744);
-  color: white;
-  border: solid 2px #023744;
+    background-image: linear-gradient(to bottom, #C22525, #023744);
+    color: white;
+    border: solid 2px #023744;
 }
 
 .customBtn:hover {
-  opacity: 0.9;
+    opacity: 0.9;
 }
 
 .footer {
-  background-color: #141313;
+    background-color: #141313;
 }
 
 input {
-  background-color: transparent;
-  border: solid 1px #FFD798;
-  border-radius: 10px;
-  font-size: 12px;
+    background-color: transparent;
+    border: solid 1px #FFD798;
+    border-radius: 10px;
+    font-size: 12px;
 }
 
 input:focus {
-  outline: none;
+    outline: none;
 }
 
 .actionBtn {
-  background-color: #FFD798;
-  color: black;
-  font-weight: bold;
-  padding: 2px 10px;
+    background-color: #FFD798;
+    color: black;
+    font-weight: bold;
+    padding: 2px 10px;
 }
+
 .carousel-control-prev,
 .carousel-control-next {
-  display: none !important; /* Hides the control buttons */
+    display: none !important;
+    /* Hides the control buttons */
+}
+
+.hiddenScrollBar {
+    scrollbar-width: none;
+}
+
+.carousel.carousel-slider .control-dots {
+    position: absolute;
+    bottom: -15px;
+    justify-content: center;
+    align-items: center;
+    left: calc(50vw - 140px/2);
+    text-align: center;
+    width: 100px;
+    z-index: 1;
+}
+
+.carousel .control-dots .dot {
+    transition: opacity .25s ease-in;
+    opacity: .3;
+    filter: alpha(opacity=30);
+    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.9);
+    background: #fff;
+    border-radius: 50%;
+    width: 4px;
+    height: 4px;
+    cursor: pointer;
+    display: inline-block;
+    margin: 0 8px;
+}
+
+.carousel .control-dots .dot.selected {
+    background: #acacac;
 }
