--- a/src/App.css
+++ b/src/App.css
@@ -190,7 +190,8 @@ input:focus {
     bottom: -15px;
     justify-content: center;
     align-items: center;
-    left: calc(50vw - 140px/2);
+    left: 50%;
+    transform: translateX(-50%);
     text-align: center;
     width: 100px;
     z-index: 1;
